--- a/index.html
+++ b/index.html
@@ -57,14 +57,61 @@
                 processo: "Design Estética",
                 exibirBlocoExplicacao: true
             },
-
+            /*
+                        3: {
+                            campos: [],
+                            textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Design Socialmente Consciente</h1>  <p class='dsc-content-text'>O Design Socialmente Consciente propõe a criação de artefatos para um design mais inclusivo e sustentável, de forma colaborativa. Assim, o CreativEduc estimula a aplicação em sala de aula com a participação dos alunos na construção destes artefatos que irão ajudar na descoberta dos personagens (partes envolvidas com o tema/enredo), com o levantamento de problemas e possíveis soluções, com uma visão sistêmica do contexto, considerando elementos sociais e interativos e por fim com uma lista de requisitos sociotécnicos que comporão o jogo.</p><p>São quatro artefatos: diagrama das partes interessadas, quadro de avaliação, torta de valores e escada semiótica (sendo necessário o tempo aproximado de 2 a 3 aulas para os quatro artefatos). Iremos começar pela Torta de Valores.</p><p>Sugere-se o preenchimento da Torta de Valores junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa. Com base no tema proposto, a Torta de Valores irá subsidiar a temporalidade da história, cenário, recursos, formas de interação e socialização dos personagens etc.</p> <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/NUZsquE.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/SFAuNny.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/ALsQBrC.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/wpNWH85.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/q8TDi6G.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/dgviYhR.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/NEbg5MR.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/lpZZ2TJ.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/FLDbdN6.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div></div>",
+                            processo: "DSC - Torta de Valores",
+                            exibirBlocoExplicacao: false
+                        },
+            */
             3: {
                 campos: [],
-                textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Design Socialmente Consciente</h1>  <p class='dsc-content-text'>O Design Socialmente Consciente propõe a criação de artefatos para um design mais inclusivo e sustentável, de forma colaborativa. Assim, o CreativEduc estimula a aplicação em sala de aula com a participação dos alunos na construção destes artefatos que irão ajudar na descoberta dos personagens (partes envolvidas com o tema/enredo), com o levantamento de problemas e possíveis soluções, com uma visão sistêmica do contexto, considerando elementos sociais e interativos e por fim com uma lista de requisitos sociotécnicos que comporão o jogo.</p><p>São quatro artefatos: diagrama das partes interessadas, quadro de avaliação, torta de valores e escada semiótica (sendo necessário o tempo aproximado de 2 a 3 aulas para os quatro artefatos). Iremos começar pela Torta de Valores.</p><p>Sugere-se o preenchimento da Torta de Valores junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa. Com base no tema proposto, a Torta de Valores irá subsidiar a temporalidade da história, cenário, recursos, formas de interação e socialização dos personagens etc.</p> <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/NUZsquE.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/SFAuNny.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/ALsQBrC.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/wpNWH85.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/q8TDi6G.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/dgviYhR.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/NEbg5MR.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/lpZZ2TJ.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/FLDbdN6.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div></div>",
+                textoExplicativo: "<div class='dsc-container'> " +
+                    "<h1 class='dsc-main-title'>Design Socialmente Consciente</h1> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/NUZsquE.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Título da imagem</h3> " +
+                    "</div> " +
+                    "<p class='dsc-content-text'>O Design Socialmente Consciente propõe a criação de artefatos para um design mais inclusivo e sustentável, de forma colaborativa. Assim, o CreativEduc estimula a aplicação em sala de aula com a participação dos alunos na construção destes artefatos que irão ajudar na descoberta dos personagens (partes envolvidas com o tema/enredo), com o levantamento de problemas e possíveis soluções, com uma visão sistêmica do contexto, considerando elementos sociais e interativos e por fim com uma lista de requisitos sociotécnicos que comporão o jogo.</p>" +
+                    "<p class='dsc-content-text'>São quatro artefatos: diagrama das partes interessadas, quadro de avaliação, torta de valores e escada semiótica (sendo necessário o tempo aproximado de 2 a 3 aulas para os quatro artefatos). Iremos começar pela Torta de Valores.</p>" +
+                    "<p class='dsc-content-text'>Sugere-se o preenchimento da Torta de Valores junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa. Com base no tema proposto, a Torta de Valores irá subsidiar a temporalidade da história, cenário, recursos, formas de interação e socialização dos personagens etc.</p>" +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/NUZsquE.png' alt='...'> " +
+                    "<h3 class='dsc-image-caption'>Cebola Semiotica</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/SFAuNny.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>2</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/ALsQBrC.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>3</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/wpNWH85.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>4</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/q8TDi6G.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>5</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/dgviYhR.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>6</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/NEbg5MR.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>7</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/lpZZ2TJ.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>8</h3> " +
+                    "</div> ",
+
                 processo: "DSC - Torta de Valores",
                 exibirBlocoExplicacao: false
             },
-
 
             4: {
                 campos: ["ambientacaoAtmosfera", "ambientacaoCenario", "ambientacaoEspaco"],
@@ -72,9 +119,29 @@
                 processo: "Design Estética",
                 exibirBlocoExplicacao: false
             },
+            /*
             5: {
                 campos: [],
                 textoExplicativo: "<div class='dsc-container'>  <h1 class='dsc-main-title'>Diagrama das Partes Interessadas</h1>  <p class='dsc-content-text'>O Diagrama das Partes Interessadas é utilizado pelo DSC para identificar os principais envolvidos e outras pessoas interessadas no contexto da solução. O DPI possui cinco camadas, sendo o núcleo, camada de operação (utilizado para o nome da aplicação, neste caso o nome do jogo), em seguida a camada de contribuição, fonte, mercado e comunidade. Quanto mais próximo do núcleo, maior é o envolvimento da pessoa. No RPG, as partes interessadas identificadas podem ser transformadas em personagens: protagonistas (os mais próximos ao núcleo), antagonistas e coadjuvantes.</p><p>Sugere-se o preenchimento do DPI junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa.</p>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/smU46nV.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/MCQjCxA.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div></div>",
+                processo: "DSC - Diagrama das Partes Interessadas",
+                exibirBlocoExplicacao: false
+            },
+            */
+            5: {
+                campos: [],
+                textoExplicativo: "<div class='dsc-container'> " +
+                    "<h1 class='dsc-main-title'>Diagrama das Partes Interessadas</h1> " +
+                    "<p class='dsc-content-text'>O Diagrama das Partes Interessadas é utilizado pelo DSC para identificar os principais envolvidos e outras pessoas interessadas no contexto da solução. O DPI possui cinco camadas, sendo o núcleo, camada de operação (utilizado para o nome da aplicação, neste caso o nome do jogo), em seguida a camada de contribuição, fonte, mercado e comunidade. Quanto mais próximo do núcleo, maior é o envolvimento da pessoa. No RPG, as partes interessadas identificadas podem ser transformadas em personagens: protagonistas (os mais próximos ao núcleo), antagonistas e coadjuvantes.</p>" +
+                    "<p>Sugere-se o preenchimento do DPI junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa.</p> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/FLDbdN6.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Títukkkkkklo da imagem</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/smU46nV.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Títukkklo da imagem</h3> " +
+                    "</div>" +
+                    "</div>",
                 processo: "DSC - Diagrama das Partes Interessadas",
                 exibirBlocoExplicacao: false
             },
@@ -84,9 +151,26 @@
                 processo: "Design Dinâmica/Mecânica",
                 exibirBlocoExplicacao: false
             },
+            /*
             7: {
                 campos: [],
                 textoExplicativo: "<div class='dsc-container'>  <h1 class='dsc-main-title'>Quadro de Avaliação</h1>  <p class='dsc-content-text'>    <p>O Quadro de Avaliação é utilizado pelo DSC para identificar problemas e/ou levantar questões de acordo com a visão das partes interessadas descobertas no DPI, bem como propor ideias e/ou soluções para os problemas levantados. O resultado do quadro de avaliação poderá ser utilizado para a composição do enredo. Sugere-se o preenchimento do Quadro de Avaliação junto com os alunos, logo após o preenchimento do DPI, utilizando o quadro branco e canetas coloridas, de forma colaborativa.</p>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/jAqts72.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div></div>",
+                processo: "DSC - Quadro de Avaliação",
+                exibirBlocoExplicacao: false
+            },
+            */
+            7: {
+                campos: [],
+                textoExplicativo: "<div class='dsc-container'> " +
+                    "<h1 class='dsc-main-title'>Quadro de Avaliação</h1> " +
+                    "<p class='dsc-content-text'> " +
+                    "<p>O Quadro de Avaliação é utilizado pelo DSC para identificar problemas e/ou levantar questões de acordo com a visão das partes interessadas descobertas no DPI, bem como propor ideias e/ou soluções para os problemas levantados. O resultado do quadro de avaliação poderá ser utilizado para a composição do enredo. Sugere-se o preenchimento do Quadro de Avaliação junto com os alunos, logo após o preenchimento do DPI, utilizando o quadro branco e canetas coloridas, de forma colaborativa.</p> " +
+                    "</p> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/MCQjCxA.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Título da imagem</h3> " +
+                    "</div>" +
+                    "</div>",
                 processo: "DSC - Quadro de Avaliação",
                 exibirBlocoExplicacao: false
             },
@@ -114,12 +198,36 @@
                 processo: "Materiais",
                 exibirBlocoExplicacao: false
             },
+            /*
             12: {
                 campos: [],
                 textoExplicativo: "<div class='dsc-container'>  <h1 class='dsc-main-title'>Escada semiotica</h1>  <p class='dsc-content-text'>Texto para colocar</p>  <div class='dsc-image-wrapper'>   <img class='dsc-content-image' src='https://i.imgur.com/00BsA8k.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/FpTZ2ky.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div></div>",
                 processo: "DSC - Escada Semiotica",
                 exibirBlocoExplicacao: false
             },
+            */
+            12: {
+                campos: [],
+                textoExplicativo: "<div class='dsc-container'> " +
+                    "<h1 class='dsc-main-title'>Escada semiotica</h1> " +
+                    //"<p class='dsc-content-text'>Texto para colocar</p> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://imgur.com/jAqts72' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Título da imagem</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/00BsA8k.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Título da imagem</h3> " +
+                    "</div> " +
+                    "<div class='dsc-image-wrapper'> " +
+                    "<img class='dsc-content-image' src='https://i.imgur.com/FpTZ2ky.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Título da imagem</h3> " +
+                    "</div>" +
+                    "</div>",
+                processo: "DSC - Escada Semiotica",
+                exibirBlocoExplicacao: false
+            },
+
             /*
             13: {
                 campos: [],                
