--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                     "<p class='dsc-content-text'>O Design Socialmente Consciente propõe a criação de artefatos para um design mais inclusivo e sustentável, de forma colaborativa. Assim, o CreativEduc estimula a aplicação em sala de aula com a participação dos alunos na construção destes artefatos que irão ajudar na descoberta dos personagens (partes envolvidas com o tema/enredo), com o levantamento de problemas e possíveis soluções, com uma visão sistêmica do contexto, considerando elementos sociais e interativos e por fim com uma lista de requisitos sociotécnicos que comporão o jogo.</p>" +
                     "<p class='dsc-content-text'>São quatro artefatos: diagrama das partes interessadas, quadro de avaliação, torta de valores e escada semiótica (sendo necessário o tempo aproximado de 2 a 3 aulas para os quatro artefatos). Iremos começar pela Torta de Valores.</p>" +
                     "<p class='dsc-content-text'>Sugere-se o preenchimento da Torta de Valores junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa. Com base no tema proposto, a Torta de Valores irá subsidiar a temporalidade da história, cenário, recursos, formas de interação e socialização dos personagens etc.</p>" +
-                    "<div class='dsc-image-wrapper'> " +
-                    "<img class='dsc-content-image' src='https://i.imgur.com/NUZsquE.png' alt='...'> " +
-                    "<h3 class='dsc-image-caption'>Cebola Semiotica</h3> " +
-                    "</div> " +
+                    //"<div class='dsc-image-wrapper'> " +
+                    //"<img class='dsc-content-image' src='https://i.imgur.com/NUZsquE.png' alt='...'> " +
+                    //"<h3 class='dsc-image-caption'>Cebola Semiotica</h3> " +
+                    //"</div> " +
                     "<div class='dsc-image-wrapper'> " +
                     "<img class='dsc-content-image' src='https://i.imgur.com/SFAuNny.png' alt='...'> " +
-                    //"<h3 class='dsc-image-caption'>2</h3> " +
+                    "<h3 class='dsc-image-caption'>Cebola Semiotica</h3> " +
                     "</div> " +
                     "<div class='dsc-image-wrapper'> " +
                     "<img class='dsc-content-image' src='https://i.imgur.com/ALsQBrC.png' alt='...'> " +
