--- a/print.html
+++ b/print.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <img src="./vdxGNAx.png" alt="Logo" class="logo">
+    <img src="./images/Lg-CREATIVeduc-horizontal.png" alt="Logo" class="logo">
     <div class="narrative-content" id="narrative"></div>
 
     <div class="no-print" style="text-align: center; margin-top: 30px;">
