refactor: transformação do campo narrativa em textarea

--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@
                     "narrativa": {
                         "type": "string",
                         "title": "Narrativa",
-                        "description": "Narrativa principal"
+                        "description": "Narrativa principal",
+                        "format": "textarea"
                     }
                 }
             },
