--- a/index.html
+++ b/index.html
@@ -470,7 +470,10 @@
                         "type": "string",
                         "title": "Narrativa",
                         "description": "Narrativa principal",
-                        "format": "textarea"
+                        "format": "textarea",
+                        "options": {
+                            "input_height": "300px"
+                        }
                     }
                 }
             },
