--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@
                                 },
                                 "habilidadesTecnicas": {
                                     "type": "array",
-                                    "title": "Habilidades Tecnicas",
+                                    "title": "Habilidades Técnicas",
                                     "items": {
                                         "type": "object",
-                                        "title": "Habilidade Tecnica",
+                                        "title": "Habilidade Técnica",
                                         "properties": {
                                             "descricao": {
                                                 "type": "string",
