--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <button class="btn btn-warning mt-3" onclick="downloadJSON()">Baixar Dados</button>
             <!-- Botão existente -->
             <button class="btn btn-danger mt-3" onclick="preparePrint()">Salvar Narrativa em PDF</button>
+            <button class="btn btn-secondary mt-3" onclick="clearData()">Limpar Dados</button>
             <div id="bloco-explicacao" class="bloco-explicacao" style="display: none;"></div>
             <div id="editor"></div>
-            
 
             <!-- visualização do objeto -->
             <!-- <pre id="output"></pre> -->
@@ -59,7 +59,7 @@
             },
             3: {
                 campos: [],
-                textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Design Socialmente Consciente</h1> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/NUZsquE.png' alt='...'> </div> <p class='dsc-content-text'>O Design Socialmente Consciente propõe a criação de artefatos para um design mais inclusivo e sustentável, de forma colaborativa. Assim, o CreativEduc estimula a aplicação em sala de aula com a participação dos alunos na construção destes artefatos que irão ajudar na descoberta dos personagens (partes envolvidas com o tema/enredo), com o levantamento de problemas e possíveis soluções, com uma visão sistêmica do contexto, considerando elementos sociais e interativos e por fim com uma lista de requisitos sociotécnicos que comporão o jogo.</p><p class='dsc-content-text'>São quatro artefatos: diagrama das partes interessadas, quadro de avaliação, torta de valores e escada semiótica (sendo necessário o tempo aproximado de 2 a 3 aulas para os quatro artefatos). Iremos começar pela Torta de Valores.</p><p class='dsc-content-text'>Sugere-se o preenchimento da Torta de Valores junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa. Com base no tema proposto, a Torta de Valores irá subsidiar a temporalidade da história, cenário, recursos, formas de interação e socialização dos personagens etc.</p><div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/SFAuNny.png' alt='...'> <h3 class='dsc-image-caption'>Cebola Semiótica</h3> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/ALsQBrC.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/wpNWH85.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/q8TDi6G.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/dgviYhR.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/NEbg5MR.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/lpZZ2TJ.png' alt='...'> </div> ",
+                textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Design Socialmente Consciente</h1> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/7z1f38R.png' alt='...'> </div> <p class='dsc-content-text'>O Design Socialmente Consciente propõe a criação de artefatos para um design mais inclusivo e sustentável, de forma colaborativa. Assim, o CreativEduc estimula a aplicação em sala de aula com a participação dos alunos na construção destes artefatos que irão ajudar na descoberta dos personagens (partes envolvidas com o tema/enredo), com o levantamento de problemas e possíveis soluções, com uma visão sistêmica do contexto, considerando elementos sociais e interativos e por fim com uma lista de requisitos sociotécnicos que comporão o jogo.</p><p class='dsc-content-text'>São quatro artefatos: diagrama das partes interessadas, quadro de avaliação, torta de valores e escada semiótica (sendo necessário o tempo aproximado de 2 a 3 aulas para os quatro artefatos). Iremos começar pela Torta de Valores.</p><p class='dsc-content-text'>Sugere-se o preenchimento da Torta de Valores junto com os alunos, utilizando o quadro branco e canetas coloridas, de forma colaborativa. Com base no tema proposto, a Torta de Valores irá subsidiar a temporalidade da história, cenário, recursos, formas de interação e socialização dos personagens etc.</p><div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/SFAuNny.png' alt='...'>  </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/ALsQBrC.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/wpNWH85.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/q8TDi6G.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/dgviYhR.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/NEbg5MR.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/lpZZ2TJ.png' alt='...'> </div> ",
                 processo: "DSC - Torta de Valores",
                 exibirBlocoExplicacao: false
             },
@@ -113,13 +113,13 @@
             },           
             12: {
                 campos: [],
-                textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Escada semiótica</h1> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://imgur.com/jAqts72' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/00BsA8k.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/FpTZ2ky.png' alt='...'> </div></div>",
+                textoExplicativo: "<div class='dsc-container'> <h1 class='dsc-main-title'>Escada semiótica</h1> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/8N52uaj.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/00BsA8k.png' alt='...'> </div> <div class='dsc-image-wrapper'> <img class='dsc-content-image' src='https://i.imgur.com/FpTZ2ky.png' alt='...'> </div></div>",
                 processo: "DSC - Escada Semiotica",
                 exibirBlocoExplicacao: false
             },           
             13: {
                 campos: [],
-                textoExplicativo: "<div class='dsc-container'>    <h1 class='dsc-main-title'>Criação da narrativa</h1><div class='callout-note'><strong>Nota:</strong> Se estiver satisfeito com o resultado, copie este texto e cole na página seguinte <strong>'Narrativa'</strong> para gerar o PDF. Se quiser ajuda da IA, acesse <a href='https://chatgpt.com/' target='_blank'>https://chatgpt.com/</a> e cole este prompt! Você ainda pode editar este texto antes de gerar a narrativa final.</div>    <p class='dsc-content-text'>        Crie um RPG educacional em que o aluno possa <strong>[funcoesAprendizagem.Criar]</strong>, para aprender mais sobre         <strong>[conteudo]</strong> e <strong>[conteudoInterdisciplinar]</strong>. O jogo deve estimular o exercício das habilidades sociais e interpessoais:         <strong>[habilidadesSociais]</strong> e <strong>[habilidadesTecnicas]</strong>. O RPG deve utilizar o tema <strong>[tema]</strong> e apresentar um ambiente         <strong>[ambientacaoAtmosfera]</strong>. O cenário principal é <strong>[ambientacaoCenario]</strong>, com espaços jogáveis em         <strong>[ambientacaoEspaco]</strong>. Os personagens devem possuir a seguinte descrição: <strong>[personagens.descricao]</strong> da categoria         <strong>[personagens.categoria]</strong>, para resolver o problema <strong>[enredo.problema.descricao]</strong>, superando o desafio         <strong>[enredo.problema.desafio]</strong> e explorando possíveis soluções <strong>[enredo.problema.solucao]</strong>.         Cada protagonista terá habilidades técnicas <strong>[habilidadesTecnicas]</strong> e habilidades sociais <strong>[habilidadesSociais]</strong> específicas.         Além disso, defina parâmetros de caracterização dos personagens e estabeleça regras de aleatoriedade para eventos e desafios do jogo.         O jogo deve conter sessões <strong>[sessoes.nome]</strong> com cenas descritas como <strong>[sessoes.cenas.descricao]</strong> para resolver o desafio         <strong>[enredo.problema.desafio]</strong>. A aleatoriedade pode utilizar <strong>[regrasAleatoriedade]</strong>, prever         <strong>[regrasRecompensas]</strong> e fornecer <strong>[regrasFeedback]</strong>. Utilize os materiais: <strong>[materiais.descricao]</strong>.</div>",
+                textoExplicativo: "<div class='dsc-container'>    <h1 class='dsc-main-title'>Criação da narrativa</h1><div class='callout-note'><strong>Nota: </strong>Se quiser ajuda da IA, acesse <a href='https://chatgpt.com/' target='_blank'>https://chatgpt.com/</a> e cole este prompt! Você ainda pode editar este texto antes de gerar a narrativa final.</div>    <p class='dsc-content-text'>        Crie um RPG educacional em que o aluno possa <strong>[funcoesAprendizagem.Criar]</strong>, para aprender mais sobre         <strong>[conteudo]</strong> e <strong>[conteudoInterdisciplinar]</strong>. O jogo deve estimular o exercício das habilidades sociais e interpessoais:         <strong>[habilidadesSociais]</strong> e <strong>[habilidadesTecnicas]</strong>. O RPG deve utilizar o tema <strong>[tema]</strong> e apresentar um ambiente         <strong>[ambientacaoAtmosfera]</strong>. O cenário principal é <strong>[ambientacaoCenario]</strong>, com espaços jogáveis em         <strong>[ambientacaoEspaco]</strong>. Os personagens devem possuir a seguinte descrição: <strong>[personagens.descricao]</strong> da categoria         <strong>[personagens.categoria]</strong>, para resolver o problema <strong>[enredo.problema.descricao]</strong>, superando o desafio         <strong>[enredo.problema.desafio]</strong> e explorando possíveis soluções <strong>[enredo.problema.solucao]</strong>.         Cada protagonista terá habilidades técnicas <strong>[personagens.habilidadesTecnicas]</strong> e habilidades sociais <strong>[habilidadesSociais]</strong> específicas.         Além disso, defina parâmetros de caracterização dos personagens e estabeleça regras de aleatoriedade para eventos e desafios do jogo.         O jogo deve conter sessões <strong>[sessoes.nome]</strong> com cenas descritas como <strong>[sessoes.cenas.descricao]</strong> para resolver o desafio         <strong>[enredo.problema.desafio]</strong>. A aleatoriedade pode utilizar <strong>[regrasAleatoriedade]</strong>, prever         <strong>[regrasRecompensas]</strong> e fornecer <strong>[regrasFeedback]</strong>. Utilize os materiais: <strong>[materiais.descricao]</strong>.</div>",
                 processo: "Instrução para IA",
                 exibirBlocoExplicacao: false
             },
@@ -524,7 +524,7 @@
                 // Destaca a etapa atual
                 if (parseInt(etapa) === etapaAtual) {
                     item.classList.add("destacado");
-                }
+                }                
 
                 listaProcessos.appendChild(item);
             });
@@ -655,12 +655,40 @@
             exibirBlocoExplicacao(); // Atualiza o bloco de explicação
             saveData(); // Salva os dados e atualiza o bloco de explicação
             window.scrollTo({ top: 0, behavior: 'smooth' });
+
+             // Controle de visibilidade dos botões
+            const botaoProximaEtapa = document.querySelector('.btn-primary');
+            const botaoEtapaAnterior = document.querySelector('.btn-success');
+
+            if (etapaAtual === 1) {
+                botaoEtapaAnterior.style.display = 'none'; // Oculta o botão "Etapa Anterior" na primeira etapa
+            } else {
+                botaoEtapaAnterior.style.display = 'inline-block'; // Exibe o botão "Etapa Anterior" em outras etapas
+            }
+
+            // Oculta o botão "Próxima Etapa" na última etapa
+            if (etapaAtual === 14) {
+                botaoProximaEtapa.style.display = 'none';
+            } else {
+                botaoProximaEtapa.style.display = 'inline-block';
+            }
         }
 
         setTimeout(() => {
             atualizarFluxo();
             atualizarCampos();
             exibirBlocoExplicacao();
+
+            const botaoProximaEtapa = document.querySelector('.btn-primary');
+            const botaoEtapaAnterior = document.querySelector('.btn-success');
+
+            if (etapaAtual === 1) {
+                botaoEtapaAnterior.style.display = 'none';
+            }
+
+            if (etapaAtual === 14) {
+                botaoProximaEtapa.style.display = 'none';
+            }
         }, 100);
 
         // Função para baixar o JSON
@@ -706,6 +734,79 @@
             window.open('print.html', '_blank');          
         }
 
+        function expandirImagem(src) {
+            const modal = document.createElement('div');
+            modal.style.position = 'fixed';
+            modal.style.top = '0';
+            modal.style.left = '0';
+            modal.style.width = '100%';
+            modal.style.height = '100%';
+            modal.style.backgroundColor = 'rgba(0, 0, 0, 0.8)';
+            modal.style.display = 'flex';
+            modal.style.justifyContent = 'center';
+            modal.style.alignItems = 'center';
+            modal.style.zIndex = '1000';
+
+            const img = document.createElement('img');
+            img.src = src;
+            img.style.maxWidth = '90%';
+            img.style.maxHeight = '90%';
+            img.style.border = '2px solid white';
+
+            modal.appendChild(img);
+
+            modal.addEventListener('click', () => {
+                document.body.removeChild(modal);
+            });
+
+            document.body.appendChild(modal);
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const imagens = document.querySelectorAll('.dsc-content-image');
+            imagens.forEach(imagem => {
+                imagem.style.cursor = 'pointer';
+                imagem.addEventListener('click', () => expandirImagem(imagem.src));
+            });
+        });
+
+        function clearData() {
+            if (confirm('Tem certeza de que deseja limpar todos os dados?')) {
+                database = {
+                    "unidadeCurricular": "",
+                    "anoPeriodo": "",
+                    "conteudo": "",
+                    "conteudoInterdisciplinar": "",
+                    "habilidadesSociais": [],
+                    "habilidadesTecnicas": [],
+                    "funcoesAprendizagem": {
+                        "Criar": "",
+                        "Aplicar": "",
+                        "Sintetizar": "",
+                        "Entender": "",
+                        "Analisar": "",
+                        "Lembrar": ""
+                    },
+                    "ambientacaoAtmosfera": "",
+                    "ambientacaoCenario": "",
+                    "ambientacaoEspaco": [],
+                    "enredo": {
+                        "problema": []
+                    },
+                    "tema": "",
+                    "sessoes": [],
+                    "regrasAleatoriedade": "",
+                    "regrasRecompensas": "",
+                    "regrasFeedback": "",
+                    "personagens": [],
+                    "materiais": [],
+                    "narrativa": ""
+                };
+                editor.setValue(database);
+                localStorage.setItem("database", JSON.stringify(database));
+                alert('Dados limpos com sucesso!');
+            }
+        }
     </script>
 </body>
 </html>
